--- a/Capio/app/src/main/AndroidManifest.xml
+++ b/Capio/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
 
-        <activity android:name=".Activities.LoginActivity">
+        <activity android:name=".Activities.LoginActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
 
              <intent-filter>
              <action android:name="android.intent.action.MAIN" />
