--- a/Capio/app/src/main/AndroidManifest.xml
+++ b/Capio/app/src/main/AndroidManifest.xml
@@ -70,6 +70,7 @@
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".Activities.RealEstateDetailActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
