--- a/Capio/app/src/main/AndroidManifest.xml
+++ b/Capio/app/src/main/AndroidManifest.xml
@@ -67,6 +67,15 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.FilterActivity" />
         <activity android:name=".Activities.MapActivity">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <activity android:name=".Activities.CreateUnitActivity">
             <!--<intent-filter>-->
                 <!--<action android:name="android.intent.action.MAIN" />-->
 
